# glimpse

./: .gitignore  CMakeLists.txt  README.md
include/: consoleout.h  glerrorcode.h  glimpse.h  glout.h  status.h
include/glad/: glad.h
src/: consoleout.cpp  glerrorcode.cpp  glimpse.cpp  glout.cpp  status.cpp
